add consistency check
